          color:#ff7802;
          font-size:1.2em;
          font-weight:bold;
          margin-top:1em;
          margin-bottom:0.5em; }
      div.subtitle {
          color:#0058BA;
          font-size:0.8em;
          margin-bottom:1em;}
      div.freetext { color:#000000 }
      div.list     { color:#1D1D1D }
    </style>
  </head>
  <body>
$ 1.0.10
  % Version 1.0.10
  _ 2017-04-03
    * <b>MITHILFE BENÖTIGT</b>: Nachdem ich leider von den Betreibern der NÖ-Card keine Daten zu Verfügung gestellt bekomme, muss ich diese jedes Jahr halb automatisch generieren.<br />Dabei bekomme ich aber aus keiner maschinenlesbaren Quelle die Nummer zum Ziel. Im Buch sind diese diese Jahr im blauen Kreis neben dem Namen zu finden.<br />Um diese zuzuordnen und nachdem ich derzeit nicht viel Zeit (und auch keine NöCard) habe, bitte ich um die Mithilfe unter<br><b><a href="https://docs.google.com/spreadsheets/d/1CUaxBYbVEqhiBAAiuLPkhGerfVHgzBIegHNrzLaA9Ek/edit?usp=sharing">diesem Google Calc Link</a></b>.<br \><br /> Danke schon im Voraus! :)
    * In der Detailseite das zweite Navigationssymbol mit Google Maps verknüpft
$ 1.0.9
  % Version 1.0.9
  _ 2017-04-02
    * Filter mit Datumsauswahl erweitert
    * Bugfix Favoriten
$ 1.0.8
  % Version 1.0.8
  _ 2017-04-01
    * Filter auch in Nahe Ziele eingebaut
    * Bugfix in Nahe Ziele (Text colors would disappear at scrolling)
$ 1.0.7
  % Version 1.0.7
  _ 2017-04-01
    * Changelog aktualisiert
$ 1.0.6
  % Version 1.0.6
  _ 2017-03-25
    * neue min Android version >=4.0
    * Offene Tage für die Ziele hinzugefügt (kann über die Einstellungen deaktiviert werden)
    * Switch in den Einstellungen um die besuchten Ziele auszublenden
$ 1.0.5
  % Version 1.0.5
  _ 2016-05-05
    * Behebung des Favoriten Bugs
$ 1.0.4
  % Version 1.0.4
  _ 2016-04-23
    * Filter style changed
    * Fixed error in asking for location in wrong places - API >23 ( Android >6 )
    * Translated to english - hopefully i didn't made to many mistakes ;)
$ 1.0.3