@@ -20,8 +20,9 @@
 $ 1.0.10
   % Version 1.0.10
   _ 2017-04-03
-    * <b>MITHILFE BENÖTIGT</b>: Nachdem ich leider von den Betreibern der NÖ-Card keine Daten zu Verfügung gestellt bekomme, muss ich diese jedes Jahr halb automatisch generieren.<br />Dabei bekomme ich aber aus keiner maschinenlesbaren Quelle die Nummer zum Ziel. Im Buch sind diese diese Jahr im blauen Kreis neben dem Namen zu finden.<br />Um diese zuzuordnen und nachdem ich derzeit nicht viel Zeit (und auch keine NöCard) habe, bitte ich um die Mithilfe unter<br><b><a href="https://docs.google.com/spreadsheets/d/1CUaxBYbVEqhiBAAiuLPkhGerfVHgzBIegHNrzLaA9Ek/edit?usp=sharing">diesem Google Calc Link</a></b>.<br \><br /> Danke schon im Voraus! :)
+    * Danke an alle die mitgeholfen haben beim Nummern zuordnen!
     * In der Detailseite das zweite Navigationssymbol mit Google Maps verknüpft
+    * Bugfix: doppelte Einträge entfernt
 $ 1.0.9
   % Version 1.0.9
   _ 2017-04-02
